@@ -1,0 +1,1 @@
+/usr/share/javascript/jquery-ui/themes/base/jquery-ui.min.css
