@@ -1,0 +1,1 @@
+/usr/share/javascript/jquery-ui/jquery-ui.min.js
